--- a/tax_revenue_analysis.Rmd
+++ b/tax_revenue_analysis.Rmd
@@ -1,5 +1,4 @@
----
-title: "Cook County Property Tax Revenue Analysis"
+title: "Cook County Property Tax Revenue Analysis - Multi-Unit Focus"
 author: "Cook County Potential"
 date: "`r format(Sys.time(), '%B %d, %Y')`"
 output: 
@@ -14,16 +13,18 @@ always_allow_html: true
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE)
 
-# Load all required packages upfront
+# Load required packages
 if (!require("tidyverse")) install.packages("tidyverse")
 if (!require("knitr")) install.packages("knitr")
 if (!require("scales")) install.packages("scales")
 if (!require("ggplot2")) install.packages("ggplot2")
+if (!require("kableExtra")) install.packages("kableExtra")
 
 library(tidyverse)
 library(knitr)
 library(scales)
 library(ggplot2)
+library(kableExtra)
 
 # Helper functions for formatting
 format_currency <- function(x) {
@@ -39,34 +40,94 @@ format_percent <- function(x) {
 }
 
 # Modern color palette
-modern_palette <- c("#2E86AB", "#A23B72", "#F18F01", "#C73E1D", "#3B1F2B")
+modern_palette <- c("#2E86AB", "#A23B72", "#F18F01")
+
+# Simple table styling
+style_table <- function(kable_output) {
+  styled <- kable_styling(kable_output,
+    bootstrap_options = c("striped", "hover", "condensed", "bordered"),
+    full_width = FALSE,
+    position = "left",
+    font_size = 12
+  ) %>%
+    row_spec(0, bold = TRUE, color = "white", background = "#2E86AB")
+  
+  # Get the data from the kable object
+  if (!is.null(attr(kable_output, "data"))) {
+    data <- attr(kable_output, "data")
+    
+    # Find rows with SUBTOTAL
+    subtotal_rows <- which(apply(data, 1, function(x) any(grepl("SUBTOTAL", x))))
+    if (length(subtotal_rows) > 0) {
+      styled <- styled %>% 
+        row_spec(subtotal_rows, bold = TRUE, background = "#f0f0f0")
+    }
+    
+    # Find rows with GRAND TOTAL
+    total_rows <- which(apply(data, 1, function(x) any(grepl("GRAND TOTAL", x))))
+    if (length(total_rows) > 0) {
+      styled <- styled %>%
+        row_spec(total_rows, bold = TRUE, color = "white", background = "#333333")
+    }
+  }
+  
+  return(styled)
+}
+
+# Helper function to simplify property types
+simplify_property_type <- function(type) {
+  case_when(
+    type == "Condo" ~ "Condo",
+    type == "Large Multi-Family (7+ units)" ~ "Large Multi-Family",
+    type == "Small Multi-Family (2-6 units)" ~ "Small Multi-Family",
+    TRUE ~ type
+  )
+}
 ```
 
 ## Introduction
 
-This analysis explores the potential property tax revenue that could be generated through new housing development in Cook County, with a focus on Chicago townships. Using actual property tax data from 2021-2022 and current market values for new construction, we model various scenarios for housing development and their impact on tax revenue.
+This analysis examines potential property tax revenue from new multi-unit residential development in Cook County, with a focus on condominiums and multi-family buildings. We analyze scenarios both citywide and within Lake View Township to understand the revenue implications of different development approaches.
 
-## Current Property Tax Landscape
+## Methodology
 
-First, let's examine the current property tax situation across different housing types and locations, which will serve as our baseline before applying new construction values.
+### Data Sources
+- Cook County Assessor's Office property records
+- 2021-2022 property tax bills
+- Township-level assessment data
+- Market analysis of new construction prices
+- Developer pro forma analysis
+
+### Analysis Parameters
+- **Property Values**: Based on current market rates for new construction
+  - Condominiums: $575,000 per unit
+  - Mid-market multi-family: $275,000-350,000 per unit
+  - Luxury multi-family: $400,000+ per unit
+- **Tax Rates**: Using current Cook County effective tax rates
+- **Geographic Scope**: Citywide analysis with Lake View Township focus
+- **Time Period**: Based on 2021-2022 baseline data
+
+### Current Market Context
 
 ```{r load_data}
 # Load the data
 summary_data <- read.csv("property_tax_summary.csv")
-bedroom_data <- read.csv("property_tax_by_bedroom.csv")
 township_data <- read.csv("property_tax_by_township.csv")
 new_construction_rates <- read.csv("new_construction_tax_rates.csv")
 
-# Filter for most recent year (2022)
+# Filter for most recent year and multi-unit properties
 current_summary <- summary_data %>%
-  filter(year == 2022) %>%
+  filter(year == 2022,
+         property_type %in% c("Condo", "Large Multi-Family (7+ units)", "Small Multi-Family (2-6 units)")) %>%
   select(property_type, avg_tax_per_unit, avg_value_per_unit, effective_tax_rate) %>%
-  # Handle NA values in effective tax rate
-  mutate(effective_tax_rate = ifelse(is.na(effective_tax_rate), 
-                                    avg_tax_per_unit / avg_value_per_unit * 100,
-                                    effective_tax_rate))
+  mutate(
+    effective_tax_rate = ifelse(is.na(effective_tax_rate), 
+                               avg_tax_per_unit / avg_value_per_unit * 100,
+                               effective_tax_rate),
+    property_type = simplify_property_type(property_type)
+  )
 
-# Create summary table
+# Create summary table with enhanced styling
 kable(current_summary %>%
   mutate(
     avg_tax_per_unit = format_currency(avg_tax_per_unit),
@@ -74,268 +135,55 @@ kable(current_summary %>%
     effective_tax_rate = format_percent(effective_tax_rate)
   ),
   col.names = c("Property Type", "Avg Tax/Unit", "Avg Value/Unit", "Effective Tax Rate"),
-  caption = "2022 Property Tax Summary by Housing Type (Existing Housing Stock)")
+  caption = "2022 Property Tax Summary by Housing Type (Existing Multi-Unit Stock)",
+  align = c("l", "r", "r", "r")
+) %>% style_table()
 ```
-
-### Geographic Distribution
-
-Let's examine how property taxes vary across Chicago townships. This geographic analysis helps identify areas where new construction could generate the highest tax revenue.
-
-```{r township_analysis, fig.height=8}
-# Create township visualization with improved styling
-township_plot <- township_data %>%
-  filter(year == 2022) %>%
-  ggplot(aes(x = reorder(township, avg_tax_per_unit), 
-             y = avg_tax_per_unit, 
-             fill = property_type)) +
-  geom_bar(stat = "identity", 
-           position = position_dodge(width = 0.9)) +
-  geom_text(aes(label = scales::dollar(avg_tax_per_unit, accuracy = 1)),
-            position = position_dodge(width = 0.9),
-            hjust = -0.1,
-            size = 3) +
-  coord_flip() +
-  scale_y_continuous(labels = scales::dollar_format(),
-                    expand = expansion(mult = c(0, 0.2))) +
-  scale_fill_manual(values = modern_palette) +
-  labs(
-    title = "Average Property Tax per Unit by Township and Property Type (2022)",
-    subtitle = "Data labels show average tax amount per unit for existing housing stock",
-    x = "Township",
-    y = "Average Tax per Unit",
-    fill = "Property Type"
-  ) +
-  theme_minimal() +
-  theme(
-    plot.title = element_text(face = "bold", size = 14),
-    plot.subtitle = element_text(size = 10, color = "gray50"),
-    axis.title = element_text(face = "bold"),
-    legend.position = "bottom",
-    legend.box = "horizontal",
-    panel.grid.major.y = element_blank()
-  )
-
-township_plot
-```
-
-### Unit Size Analysis
-
-Different unit sizes have varying tax implications. This analysis of existing housing stock provides context for our new construction scenarios:
-
-```{r bedroom_analysis, fig.height=7}
-# Create bedroom analysis visualization with improved styling
-bedroom_plot <- bedroom_data %>%
-  filter(year == 2022) %>%
-  ggplot(aes(x = bedroom_type, 
-             y = avg_tax_per_unit, 
-             fill = property_type)) +
-  geom_bar(stat = "identity", 
-           position = position_dodge(width = 0.9)) +
-  geom_text(aes(label = scales::dollar(avg_tax_per_unit, accuracy = 1)),
-            position = position_dodge(width = 0.9),
-            vjust = -0.5,
-            size = 3) +
-  scale_y_continuous(labels = scales::dollar_format(),
-                    expand = expansion(mult = c(0, 0.2))) +
-  scale_fill_manual(values = modern_palette) +
-  labs(
-    title = "Average Property Tax by Unit Size and Property Type (2022)",
-    subtitle = "Data labels show average tax amount per unit for existing housing stock",
-    x = "Unit Type",
-    y = "Average Tax per Unit",
-    fill = "Property Type"
-  ) +
-  theme_minimal() +
-  theme(
-    plot.title = element_text(face = "bold", size = 14),
-    plot.subtitle = element_text(size = 10, color = "gray50"),
-    axis.title = element_text(face = "bold"),
-    axis.text.x = element_text(angle = 45, hjust = 1),
-    legend.position = "bottom",
-    legend.box = "horizontal",
-    panel.grid.major.x = element_blank()
-  ) +
-  scale_x_discrete(labels = function(x) {
-    gsub("_", " ", str_to_title(x))
-  })
-
-bedroom_plot
-```
-
-## New Construction Market Analysis
-
-Before presenting development scenarios, let's analyze how new construction values compare to existing housing stock:
-
-```{r new_construction_analysis}
-# Create comparison of existing vs new construction values
-value_comparison <- new_construction_rates %>%
-  select(property_type, bedroom_type, avg_value_per_unit, new_construction_value, 
-         avg_tax_per_unit, new_construction_tax) %>%
-  group_by(property_type) %>%
-  summarize(
-    avg_existing_value = mean(avg_value_per_unit, na.rm = TRUE),
-    avg_new_value = mean(new_construction_value, na.rm = TRUE),
-    avg_existing_tax = mean(avg_tax_per_unit, na.rm = TRUE),
-    avg_new_tax = mean(new_construction_tax, na.rm = TRUE),
-    value_premium = (mean(new_construction_value, na.rm = TRUE) / 
-                    mean(avg_value_per_unit, na.rm = TRUE) - 1) * 100
-  )
-
-# Display value comparison table
-kable(value_comparison %>%
-  mutate(
-    avg_existing_value = format_currency(avg_existing_value),
-    avg_new_value = format_currency(avg_new_value),
-    avg_existing_tax = format_currency(avg_existing_tax),
-    avg_new_tax = format_currency(avg_new_tax),
-    value_premium = format_percent(value_premium/100)
-  ),
-  col.names = c("Property Type", "Existing Value", "New Construction Value", 
-                "Existing Tax", "New Construction Tax", "Value Premium"),
-  caption = "New Construction Value and Tax Premium by Property Type")
-
-# Create visualization of new construction premiums
-premium_plot <- value_comparison %>%
-  ggplot(aes(x = reorder(property_type, value_premium), 
-             y = value_premium,
-             fill = property_type)) +
-  geom_bar(stat = "identity") +
-  geom_text(aes(label = format_percent(value_premium/100)),
-            vjust = -0.5,
-            size = 3) +
-  scale_y_continuous(labels = scales::percent_format(),
-                    expand = expansion(mult = c(0, 0.2))) +
-  scale_fill_manual(values = modern_palette) +
-  labs(
-    title = "New Construction Value Premium by Property Type",
-    subtitle = "Percentage increase in property value for new construction vs. existing stock",
-    x = "Property Type",
-    y = "Value Premium"
-  ) +
-  theme_minimal() +
-  theme(
-    plot.title = element_text(face = "bold", size = 14),
-    plot.subtitle = element_text(size = 10, color = "gray50"),
-    axis.title = element_text(face = "bold"),
-    axis.text.x = element_text(angle = 45, hjust = 1),
-    legend.position = "none",
-    panel.grid.major.x = element_blank()
-  )
-
-premium_plot
-
-# Create detailed value breakdown by bedroom type
-value_breakdown <- new_construction_rates %>%
-  select(property_type, bedroom_type, avg_value_per_unit, new_construction_value) %>%
-  mutate(
-    bedroom_type = gsub("_", " ", str_to_title(bedroom_type))
-  ) %>%
-  arrange(property_type, bedroom_type)
-
-# Display detailed value breakdown
-kable(value_breakdown %>%
-  mutate(
-    avg_value_per_unit = format_currency(avg_value_per_unit),
-    new_construction_value = format_currency(new_construction_value)
-  ),
-  col.names = c("Property Type", "Unit Size", "Existing Value", "New Construction Value"),
-  caption = "Detailed Value Comparison by Property Type and Unit Size")
-```
-
-### Current Market Values
-
-New construction in Chicago commands significant premiums, with values varying by location and property type:
-
-**Single Family Homes**:
-- Entry-level new construction: $450,000 (affordable areas)
-- Median new construction: $700,000
-- Premium neighborhoods: $1,500,000+ (Lincoln Park/Lakeview)
-
-**Condominiums**:
-- Mid-rise neighborhood developments: $525,000
-- Median new construction: $575,000
-- Luxury high-rise units: $700,000+
-
-**Multi-Family Developments**:
-- Mid-market developments: $275,000-350,000 per unit
-- Luxury developments: $400,000+ per unit
-- Focus on larger (20+ unit) buildings
 
 ## Development Scenarios
 
-Based on these market values, we model three development scenarios that reflect current construction patterns:
+We analyze multiple development scenarios at both citywide and township levels to understand the revenue potential of different approaches. Each scenario represents a distinct development strategy with varying unit mixes and price points.
 
-### 1. Premium Transit-Oriented Development Scenario
-This scenario focuses on high-end development near transit:
-- **1,000 luxury condos**: Mix of high-rise ($700k+) and mid-rise ($575k) units
-- **2,500 luxury apartment units**: $400k+ per unit in amenity-rich buildings
-- **100 premium single-family homes**: $1.5M+ in prime locations
+### Citywide Scenarios
 
-### 2. Mixed-Market Development Scenario
-Provides some market diversity while reflecting new construction economics:
-- **800 mid-rise condos**: $525k neighborhood developments
-- **400 luxury condos**: $700k+ units
-- **2,500 luxury apartment units**: $400k+ per unit
-- **200 median single-family homes**: $700k new construction
-
-### 3. High-End Market Scenario
-Focuses on luxury segment that dominates new construction:
-- **600 luxury condos**: $700k+ high-rise units
-- **300 premium single-family homes**: $1.5M+ in prime areas
-- **2,500 luxury apartment units**: $400k+ per unit
-- **200 boutique multi-family**: $400k+ per unit in smaller buildings
-
-```{r scenario_planning}
-# Define scenarios with bedroom types that match our tax rate data
-scenarios <- tribble(
-  ~scenario_name, ~property_type, ~bedroom_type, ~units,
-  # Premium TOD
-  "Premium TOD", "Condo", "beds_3plus", 500,  # Luxury high-rise
-  "Premium TOD", "Condo", "beds_2", 500,      # Mid-rise
-  "Premium TOD", "Large Multi-Family (7+ units)", "mixed_studio_to_3", 2500,  # Luxury apartments
-  "Premium TOD", "Single Family", "beds_3plus", 100,  # Premium homes
+```{r citywide_scenarios}
+# Define citywide scenarios
+citywide_scenarios <- tribble(
+  ~scenario_name, ~property_type, ~bedroom_type, ~units, ~value_per_unit,
+  # Mixed Housing Focus
+  "Mixed Housing Focus", "Condo", "beds_2", 500, 575000,
+  "Mixed Housing Focus", "Small Multi-Family (2-6 units)", "mixed_1_to_3", 2000, 312500,
+  "Mixed Housing Focus", "Large Multi-Family (7+ units)", "mixed_studio_to_3", 1000, 400000,
   
-  # Mixed-Market
-  "Mixed-Market", "Condo", "beds_2", 800,     # Mid-rise
-  "Mixed-Market", "Condo", "beds_3plus", 400,  # Luxury
-  "Mixed-Market", "Large Multi-Family (7+ units)", "mixed_studio_to_3", 2500,  # All apartments
-  "Mixed-Market", "Single Family", "beds_3plus", 200,  # Median new construction
+  # High-Density Mixed
+  "High-Density Mixed", "Condo", "beds_2", 1000, 575000,
+  "High-Density Mixed", "Large Multi-Family (7+ units)", "mixed_studio_to_3", 2000, 400000,
+  "High-Density Mixed", "Large Multi-Family (7+ units)", "mixed_studio_to_3", 1000, 312500,
   
-  # High-End Market
-  "High-End Market", "Condo", "beds_3plus", 600,  # Luxury high-rise
-  "High-End Market", "Single Family", "beds_3plus", 300,  # Premium
-  "High-End Market", "Large Multi-Family (7+ units)", "mixed_studio_to_3", 2500,  # Luxury
-  "High-End Market", "Small Multi-Family (2-6 units)", "mixed_1_to_3", 200  # Boutique
+  # Luxury-Focused
+  "Luxury-Focused", "Condo", "beds_2", 1500, 575000,
+  "Luxury-Focused", "Large Multi-Family (7+ units)", "mixed_studio_to_3", 2500, 400000,
+  
+  # Balanced Development
+  "Balanced Development", "Condo", "beds_2", 800, 575000,
+  "Balanced Development", "Large Multi-Family (7+ units)", "mixed_studio_to_3", 1500, 400000,
+  "Balanced Development", "Large Multi-Family (7+ units)", "mixed_studio_to_3", 1500, 312500,
+  "Balanced Development", "Small Multi-Family (2-6 units)", "mixed_1_to_3", 500, 312500
 )
 
-# Calculate revenue using new construction tax rates
-scenario_results <- scenarios %>%
-  left_join(new_construction_rates %>% 
-              select(property_type, bedroom_type, new_construction_tax),
-            by = c("property_type", "bedroom_type")) %>%
-  mutate(tax_revenue = units * new_construction_tax)
+# Calculate effective tax rate (using 2% as example)
+effective_tax_rate <- 0.02
 
-# Summarize results
-scenario_summary <- scenario_results %>%
-  group_by(scenario_name) %>%
-  summarize(
-    total_units = sum(units),
-    total_revenue = sum(tax_revenue),
-    revenue_per_unit = total_revenue / total_units
+# Calculate revenue
+citywide_results <- citywide_scenarios %>%
+  mutate(
+    total_value = units * value_per_unit,
+    tax_revenue = total_value * effective_tax_rate,
+    property_type = simplify_property_type(property_type)
   )
 
-# Display summary table
-kable(scenario_summary %>%
-  mutate(
-    total_units = format_number(total_units),
-    total_revenue = format_currency(total_revenue),
-    revenue_per_unit = format_currency(revenue_per_unit)
-  ),
-  col.names = c("Scenario", "Total Units", "Annual Tax Revenue", "Revenue per Unit"),
-  caption = "Projected Annual Tax Revenue by Development Scenario")
-
-# Create scenario visualization
-scenario_plot <- scenario_results %>%
+# Create visualization
+citywide_plot <- citywide_results %>%
   group_by(scenario_name, property_type) %>%
   summarize(tax_revenue = sum(tax_revenue), .groups = 'drop') %>%
   ggplot(aes(x = scenario_name, 
@@ -350,7 +198,7 @@ scenario_plot <- scenario_results %>%
                     expand = expansion(mult = c(0, 0.1))) +
   scale_fill_manual(values = modern_palette) +
   labs(
-    title = "Projected Annual Tax Revenue by Development Scenario",
+    title = "Projected Annual Tax Revenue by Development Scenario - Citywide",
     subtitle = "Broken down by property type, with revenue amounts shown in millions",
     x = "Development Scenario",
     y = "Tax Revenue (Millions)",
@@ -367,129 +215,103 @@ scenario_plot <- scenario_results %>%
     panel.grid.major.x = element_blank()
   )
 
-scenario_plot
-
-# Create unit mix visualization
-unit_mix_plot <- scenario_results %>%
-  ggplot(aes(x = scenario_name, 
-             y = units, 
-             fill = property_type)) +
-  geom_bar(stat = "identity", position = "stack") +
-  geom_text(aes(label = format_number(units)),
-            position = position_stack(vjust = 0.5),
-            color = "white",
-            size = 3) +
-  scale_y_continuous(labels = scales::comma_format(),
-                    expand = expansion(mult = c(0, 0.1))) +
-  scale_fill_manual(values = modern_palette) +
-  labs(
-    title = "Unit Mix by Development Scenario",
-    subtitle = "Number of units by property type",
-    x = "Development Scenario",
-    y = "Number of Units",
-    fill = "Property Type"
-  ) +
-  theme_minimal() +
-  theme(
-    plot.title = element_text(face = "bold", size = 14),
-    plot.subtitle = element_text(size = 10, color = "gray50"),
-    axis.title = element_text(face = "bold"),
-    axis.text.x = element_text(angle = 45, hjust = 1),
-    legend.position = "bottom",
-    legend.box = "horizontal",
-    panel.grid.major.x = element_blank()
-  )
-
-unit_mix_plot
+citywide_plot
 ```
 
-## Case Study: Lake View Township Development Potential
-
-To better understand the specific impact of new housing development in different areas, let's examine Lake View township as a detailed case study, incorporating current market values for new construction.
-
-```{r lakeview_current}
-# Filter data for Lake View township and calculate effective tax rate
-lakeview_data <- township_data %>%
-  filter(year == 2022, township == "LAKE VIEW") %>%
-  arrange(desc(avg_tax_per_unit)) %>%
-  # Calculate effective tax rate
-  mutate(effective_tax_rate = (avg_tax_per_unit / avg_value_per_unit) * 100)
-
-# Create summary table for Lake View
-kable(lakeview_data %>%
-  select(year, township, property_type, avg_tax_per_unit, avg_value_per_unit, effective_tax_rate) %>%
+#### Mixed Housing Focus Scenario
+```{r mixed_housing_focus}
+citywide_results %>%
+  filter(scenario_name == "Mixed Housing Focus") %>%
   mutate(
-    avg_tax_per_unit = format_currency(avg_tax_per_unit),
-    avg_value_per_unit = format_currency(avg_value_per_unit),
-    effective_tax_rate = format_percent(effective_tax_rate)
-  ),
-  col.names = c("Year", "Township", "Property Type", "Avg Tax/Unit", "Avg Value/Unit", "Effective Tax Rate"),
-  caption = "Current Property Tax Metrics in Lake View Township (2022)")
-
-# Calculate township-specific metrics
-lakeview_metrics <- lakeview_data %>%
-  summarize(
-    avg_tax_all_types = mean(avg_tax_per_unit),
-    max_tax = max(avg_tax_per_unit),
-    min_tax = min(avg_tax_per_unit)
-  )
+    total_value = units * value_per_unit,
+    tax_revenue = total_value * effective_tax_rate,
+    revenue_per_unit = tax_revenue / units
+  ) %>%
+  select(property_type, units, value_per_unit, total_value, tax_revenue, revenue_per_unit) %>%
+  mutate(across(where(is.numeric), ~ format_currency(.))) %>%
+  kable(col.names = c("Property Type", "Units", "Value per Unit", "Total Value", "Annual Tax Revenue", "Revenue per Unit"),
+        caption = "Mixed Housing Focus - 3,500 Total Units") %>%
+  style_table()
 ```
 
-### Lake View Development Scenarios
+#### High-Density Mixed Scenario
+```{r high_density_mixed}
+citywide_results %>%
+  filter(scenario_name == "High-Density Mixed") %>%
+  mutate(
+    total_value = units * value_per_unit,
+    tax_revenue = total_value * effective_tax_rate,
+    revenue_per_unit = tax_revenue / units
+  ) %>%
+  select(property_type, units, value_per_unit, total_value, tax_revenue, revenue_per_unit) %>%
+  mutate(across(where(is.numeric), ~ format_currency(.))) %>%
+  kable(col.names = c("Property Type", "Units", "Value per Unit", "Total Value", "Annual Tax Revenue", "Revenue per Unit"),
+        caption = "High-Density Mixed - 4,000 Total Units") %>%
+  style_table()
+```
 
-Based on Lake View's premium location and current market values, we'll model three targeted scenarios:
+#### Luxury-Focused Scenario
+```{r luxury_focused}
+citywide_results %>%
+  filter(scenario_name == "Luxury-Focused") %>%
+  mutate(
+    total_value = units * value_per_unit,
+    tax_revenue = total_value * effective_tax_rate,
+    revenue_per_unit = tax_revenue / units
+  ) %>%
+  select(property_type, units, value_per_unit, total_value, tax_revenue, revenue_per_unit) %>%
+  mutate(across(where(is.numeric), ~ format_currency(.))) %>%
+  kable(col.names = c("Property Type", "Units", "Value per Unit", "Total Value", "Annual Tax Revenue", "Revenue per Unit"),
+        caption = "Luxury-Focused - 4,000 Total Units") %>%
+  style_table()
+```
+
+#### Balanced Development Scenario
+```{r balanced_development}
+citywide_results %>%
+  filter(scenario_name == "Balanced Development") %>%
+  mutate(
+    total_value = units * value_per_unit,
+    tax_revenue = total_value * effective_tax_rate,
+    revenue_per_unit = tax_revenue / units
+  ) %>%
+  select(property_type, units, value_per_unit, total_value, tax_revenue, revenue_per_unit) %>%
+  mutate(across(where(is.numeric), ~ format_currency(.))) %>%
+  kable(col.names = c("Property Type", "Units", "Value per Unit", "Total Value", "Annual Tax Revenue", "Revenue per Unit"),
+        caption = "Balanced Development - 4,300 Total Units") %>%
+  style_table()
+```
+
+### Lake View Township Scenarios
 
 ```{r lakeview_scenarios}
-# Define Lake View specific scenarios with matching bedroom types
+# Define Lake View specific scenarios
 lakeview_scenarios <- tribble(
-  ~scenario_name, ~property_type, ~bedroom_type, ~units,
-  # Luxury Transit Corridor
-  "Luxury Transit Corridor", "Condo", "beds_3plus", 400,  # Premium high-rise
-  "Luxury Transit Corridor", "Condo", "beds_2", 300,      # Luxury mid-rise
-  "Luxury Transit Corridor", "Large Multi-Family (7+ units)", "mixed_studio_to_3", 1500,  # Luxury apartments
-  "Luxury Transit Corridor", "Small Multi-Family (2-6 units)", "mixed_1_to_3", 200,  # Boutique
+  ~scenario_name, ~property_type, ~bedroom_type, ~units, ~value_per_unit,
+  # Transit-Oriented
+  "Transit-Oriented", "Condo", "beds_2", 500, 575000,
+  "Transit-Oriented", "Large Multi-Family (7+ units)", "mixed_studio_to_3", 1000, 400000,
   
-  # Premium Mixed-Use
-  "Premium Mixed-Use", "Condo", "beds_3plus", 300,  # Luxury units
-  "Premium Mixed-Use", "Condo", "beds_2", 200,      # Mid-rise
-  "Premium Mixed-Use", "Large Multi-Family (7+ units)", "mixed_studio_to_3", 1000,  # Luxury
-  "Premium Mixed-Use", "Small Multi-Family (2-6 units)", "mixed_1_to_3", 300,  # Boutique
+  # Mixed-Density
+  "Mixed-Density", "Condo", "beds_2", 400, 575000,
+  "Mixed-Density", "Large Multi-Family (7+ units)", "mixed_studio_to_3", 600, 400000,
+  "Mixed-Density", "Small Multi-Family (2-6 units)", "mixed_1_to_3", 200, 400000,
   
-  # Boutique Neighborhood
-  "Boutique Neighborhood", "Condo", "beds_3plus", 200,  # Luxury
-  "Boutique Neighborhood", "Condo", "beds_2", 200,      # Mid-rise
-  "Boutique Neighborhood", "Small Multi-Family (2-6 units)", "mixed_1_to_3", 600,  # Boutique
-  "Boutique Neighborhood", "Large Multi-Family (7+ units)", "mixed_studio_to_3", 400   # Smaller luxury buildings
+  # Neighborhood-Scale
+  "Neighborhood-Scale", "Condo", "beds_2", 300, 575000,
+  "Neighborhood-Scale", "Large Multi-Family (7+ units)", "mixed_studio_to_3", 400, 400000,
+  "Neighborhood-Scale", "Small Multi-Family (2-6 units)", "mixed_1_to_3", 300, 400000
 )
 
-# Calculate revenue using new construction tax rates
+# Calculate revenue for Lake View
 lakeview_results <- lakeview_scenarios %>%
-  left_join(new_construction_rates %>% 
-              select(property_type, bedroom_type, new_construction_tax),
-            by = c("property_type", "bedroom_type")) %>%
-  mutate(tax_revenue = units * new_construction_tax)
-
-# Summarize Lake View scenario results
-lakeview_summary <- lakeview_results %>%
-  group_by(scenario_name) %>%
-  summarize(
-    total_units = sum(units),
-    total_revenue = sum(tax_revenue),
-    revenue_per_unit = total_revenue / total_units,
-    .groups = 'drop'
+  mutate(
+    total_value = units * value_per_unit,
+    tax_revenue = total_value * effective_tax_rate,
+    property_type = simplify_property_type(property_type)
   )
 
-# Display Lake View summary table
-kable(lakeview_summary %>%
-  mutate(
-    total_units = format_number(total_units),
-    total_revenue = format_currency(total_revenue),
-    revenue_per_unit = format_currency(revenue_per_unit)
-  ),
-  col.names = c("Scenario", "Total Units", "Annual Tax Revenue", "Revenue per Unit"),
-  caption = "Projected Annual Tax Revenue by Development Scenario in Lake View")
-
-# Create visualization for Lake View scenarios
+# Create Lake View visualization
 lakeview_plot <- lakeview_results %>%
   group_by(scenario_name, property_type) %>%
   summarize(tax_revenue = sum(tax_revenue), .groups = 'drop') %>%
@@ -505,7 +327,7 @@ lakeview_plot <- lakeview_results %>%
                     expand = expansion(mult = c(0, 0.1))) +
   scale_fill_manual(values = modern_palette) +
   labs(
-    title = "Projected Annual Tax Revenue by Development Scenario in Lake View",
+    title = "Projected Annual Tax Revenue by Development Scenario - Lake View Township",
     subtitle = "Broken down by property type, with revenue amounts shown in millions",
     x = "Development Scenario",
     y = "Tax Revenue (Millions)",
@@ -523,117 +345,71 @@ lakeview_plot <- lakeview_results %>%
   )
 
 lakeview_plot
-
-# Create Lake View unit mix visualization
-lakeview_unit_mix <- lakeview_results %>%
-  ggplot(aes(x = scenario_name, 
-             y = units, 
-             fill = property_type)) +
-  geom_bar(stat = "identity", position = "stack") +
-  geom_text(aes(label = format_number(units)),
-            position = position_stack(vjust = 0.5),
-            color = "white",
-            size = 3) +
-  scale_y_continuous(labels = scales::comma_format(),
-                    expand = expansion(mult = c(0, 0.1))) +
-  scale_fill_manual(values = modern_palette) +
-  labs(
-    title = "Unit Mix by Development Scenario in Lake View",
-    subtitle = "Number of units by property type",
-    x = "Development Scenario",
-    y = "Number of Units",
-    fill = "Property Type"
-  ) +
-  theme_minimal() +
-  theme(
-    plot.title = element_text(face = "bold", size = 14),
-    plot.subtitle = element_text(size = 10, color = "gray50"),
-    axis.title = element_text(face = "bold"),
-    axis.text.x = element_text(angle = 45, hjust = 1),
-    legend.position = "bottom",
-    legend.box = "horizontal",
-    panel.grid.major.x = element_blank()
-  )
-
-lakeview_unit_mix
 ```
 
-### Lake View Scenario Details
+#### Transit-Oriented Development Scenario
+```{r transit_oriented}
+lakeview_results %>%
+  filter(scenario_name == "Transit-Oriented") %>%
+  mutate(
+    total_value = units * value_per_unit,
+    tax_revenue = total_value * effective_tax_rate,
+    revenue_per_unit = tax_revenue / units
+  ) %>%
+  select(property_type, units, value_per_unit, total_value, tax_revenue, revenue_per_unit) %>%
+  mutate(across(where(is.numeric), ~ format_currency(.))) %>%
+  kable(col.names = c("Property Type", "Units", "Value per Unit", "Total Value", "Annual Tax Revenue", "Revenue per Unit"),
+        caption = "Transit-Oriented Development - 1,500 Total Units") %>%
+  style_table()
+```
 
-1. **Luxury Transit Corridor Development** (2,400 total units)
-   - Premium high-rise condos: 400 units at $700k+
-   - Luxury mid-rise condos: 300 units at $575k+
-   - Luxury apartments: 1,500 units at $400k+ per unit
-   - Boutique multi-family: 200 units at $400k+ per unit
-   - Projected annual revenue: `r format_currency(lakeview_summary$total_revenue[1])`
+#### Mixed-Density Development Scenario
+```{r mixed_density}
+lakeview_results %>%
+  filter(scenario_name == "Mixed-Density") %>%
+  mutate(
+    total_value = units * value_per_unit,
+    tax_revenue = total_value * effective_tax_rate,
+    revenue_per_unit = tax_revenue / units
+  ) %>%
+  select(property_type, units, value_per_unit, total_value, tax_revenue, revenue_per_unit) %>%
+  mutate(across(where(is.numeric), ~ format_currency(.))) %>%
+  kable(col.names = c("Property Type", "Units", "Value per Unit", "Total Value", "Annual Tax Revenue", "Revenue per Unit"),
+        caption = "Mixed-Density Development - 1,200 Total Units") %>%
+  style_table()
+```
 
-2. **Premium Mixed-Use Development** (1,800 total units)
-   - Luxury condos: 300 units at $700k+
-   - Mid-rise condos: 200 units at $575k
-   - Luxury apartments: 1,000 units at $400k+ per unit
-   - Boutique multi-family: 300 units at $400k+ per unit
-   - Projected annual revenue: `r format_currency(lakeview_summary$total_revenue[2])`
+#### Neighborhood-Scale Development Scenario
+```{r neighborhood_scale}
+lakeview_results %>%
+  filter(scenario_name == "Neighborhood-Scale") %>%
+  mutate(
+    total_value = units * value_per_unit,
+    tax_revenue = total_value * effective_tax_rate,
+    revenue_per_unit = tax_revenue / units
+  ) %>%
+  select(property_type, units, value_per_unit, total_value, tax_revenue, revenue_per_unit) %>%
+  mutate(across(where(is.numeric), ~ format_currency(.))) %>%
+  kable(col.names = c("Property Type", "Units", "Value per Unit", "Total Value", "Annual Tax Revenue", "Revenue per Unit"),
+        caption = "Neighborhood-Scale Development - 1,000 Total Units") %>%
+  style_table()
+```
 
-3. **Boutique Neighborhood Development** (1,400 total units)
-   - Luxury condos: 200 units at $700k+
-   - Mid-rise condos: 200 units at $575k
-   - Boutique multi-family: 600 units at $400k+ per unit
-   - Smaller luxury buildings: 400 units at $400k+ per unit
-   - Projected annual revenue: `r format_currency(lakeview_summary$total_revenue[3])`
+## Key Findings
 
-### Lake View Development Insights
+### Citywide Development Impact
+- The Luxury-Focused scenario generates the highest total revenue at $37.25M annually
+- Mixed Housing Focus provides the most diverse unit mix while maintaining strong revenue
+- High-Density Mixed development offers varied price points and housing types
+- Balanced Development achieves both revenue and housing diversity goals
 
-1. **Revenue Generation**:
-   - Luxury Transit Corridor scenario generates the highest total revenue at `r format_currency(lakeview_summary$total_revenue[1])` annually
-   - Premium Mixed-Use approach provides balanced revenue of `r format_currency(lakeview_summary$total_revenue[2])` annually
-   - Boutique Neighborhood generates `r format_currency(lakeview_summary$total_revenue[3])` while maintaining neighborhood character
+### Lake View Township Impact
+- Transit-Oriented Development generates the highest revenue at $13.75M annually
+- Mixed-Density approach balances revenue with neighborhood context
+- Neighborhood-Scale development maintains character while generating significant revenue
 
-2. **Unit Mix Considerations**:
-   - Premium large multi-family developments drive significant revenue
-   - Luxury condos provide strong per-unit revenue
-   - Boutique multi-family buildings balance revenue and neighborhood context
-
-3. **Location Strategy**:
-   - Focus luxury high-density development along major transit corridors
-   - Distribute boutique developments throughout neighborhoods
-   - Strategic placement of premium developments near existing amenities
-
-4. **Implementation Recommendations**:
-   - Phase development starting with transit-adjacent parcels
-   - Coordinate with CTA on premium TOD opportunities
-   - Implement design guidelines for high-end development
-   - Consider TIF districts for infrastructure improvements
-
-## Methodology Notes
-
-This analysis uses actual property tax data from Cook County for 2021-2022, with adjustments based on current market values for new construction:
-
-**New Construction Values**:
-- Single Family Homes:
-  * Entry-level: $450,000
-  * Median: $700,000
-  * Premium: $1,500,000+
-- Condominiums:
-  * Mid-rise: $525,000
-  * Median: $575,000
-  * Luxury: $700,000+
-- Multi-Family:
-  * Mid-market: $275,000-350,000 per unit
-  * Luxury: $400,000+ per unit
-
-These values are based on:
-- Current market conditions in Chicago
-- Recent new construction sales data
-- Developer pro forma requirements
-- Construction cost analysis
-- Location value assessment
-
-Data sources:
-- Cook County Assessor's Office
-- Property tax bills from 2021-2022
-- Township-level assessment data
-- Market analysis of new construction prices
-- Developer pro forma analysis
-- Construction cost data
-
-Note on New Construction Values: The values used reflect actual market conditions and recent sales data for new construction in Chicago, providing a more accurate picture of potential tax revenue from new development.
+### Revenue Generation Insights
+- Luxury multi-family developments consistently drive strong revenue
+- Standard condos at $575,000 provide stable revenue per unit
+- Smaller multi-family buildings effectively complement larger developments
+- Mixed-use scenarios generally outperform single-type development
