--- a/tax_revenue_analysis.Rmd
+++ b/tax_revenue_analysis.Rmd
@@ -87,7 +87,7 @@ simplify_property_type <- function(type) {
 
 ## Introduction
 
-This analysis examines potential property tax revenue from new multi-unit residential development in Cook County, with a focus on condominiums and multi-family buildings. We analyze scenarios both citywide and within Lake View Township to understand the revenue implications of different development approaches.
+This analysis examines property tax revenue from multi-unit residential development in Cook County, with a focus on Lake View Township. We analyze current tax patterns across different housing types and project potential revenue from new mixed-housing development.
 
 ## Methodology
 
@@ -104,103 +104,101 @@ This analysis examines potential property tax revenue from new multi-unit reside
   - Mid-market multi-family: $275,000-350,000 per unit
   - Luxury multi-family: $400,000+ per unit
 - **Tax Rates**: Using current Cook County effective tax rates
-- **Geographic Scope**: Citywide analysis with Lake View Township focus
+- **Geographic Scope**: Lake View Township focus
 - **Time Period**: Based on 2021-2022 baseline data
 
-### Current Market Context
+## Current Housing Stock Analysis
 
-```{r load_data}
+### Tax Bills and Assessed Values by Housing Type
+
+```{r housing_analysis}
 # Load the data
 summary_data <- read.csv("property_tax_summary.csv")
 township_data <- read.csv("property_tax_by_township.csv")
 new_construction_rates <- read.csv("new_construction_tax_rates.csv")
 
-# Filter for most recent year and multi-unit properties
-current_summary <- summary_data %>%
+# Create detailed summary statistics
+detailed_summary <- summary_data %>%
   filter(year == 2022,
          property_type %in% c("Condo", "Large Multi-Family (7+ units)", "Small Multi-Family (2-6 units)")) %>%
-  select(property_type, avg_tax_per_unit, avg_value_per_unit, effective_tax_rate) %>%
-  mutate(
-    effective_tax_rate = ifelse(is.na(effective_tax_rate), 
-                               avg_tax_per_unit / avg_value_per_unit * 100,
-                               effective_tax_rate),
-    property_type = simplify_property_type(property_type)
-  )
+  group_by(property_type) %>%
+  summarize(
+    avg_tax = mean(avg_tax_per_unit),
+    median_tax = median(avg_tax_per_unit),
+    avg_value = mean(avg_value_per_unit),
+    median_value = median(avg_value_per_unit),
+    effective_tax_rate = mean(effective_tax_rate)
+  ) %>%
+  mutate(property_type = simplify_property_type(property_type))
 
 # Create summary table with enhanced styling
-kable(current_summary %>%
+kable(detailed_summary %>%
   mutate(
-    avg_tax_per_unit = format_currency(avg_tax_per_unit),
-    avg_value_per_unit = format_currency(avg_value_per_unit),
+    avg_tax = format_currency(avg_tax),
+    median_tax = format_currency(median_tax),
+    avg_value = format_currency(avg_value),
+    median_value = format_currency(median_value),
     effective_tax_rate = format_percent(effective_tax_rate)
   ),
-  col.names = c("Property Type", "Avg Tax/Unit", "Avg Value/Unit", "Effective Tax Rate"),
-  caption = "2022 Property Tax Summary by Housing Type (Existing Multi-Unit Stock)",
-  align = c("l", "r", "r", "r")
+  col.names = c("Property Type", "Avg Tax/Unit", "Median Tax/Unit", 
+                "Avg Value/Unit", "Median Value/Unit", "Effective Tax Rate"),
+  caption = "2022 Property Tax and Value Summary by Housing Type",
+  align = c("l", "r", "r", "r", "r", "r")
 ) %>% style_table()
 ```
 
-## Development Scenarios
+### Lake View Township Mixed Housing Development Scenario
 
-We analyze multiple development scenarios at both citywide and township levels to understand the revenue potential of different approaches. Each scenario represents a distinct development strategy with varying unit mixes and price points.
+This scenario represents a balanced approach to new development in Lake View Township, incorporating a mix of housing types to serve diverse needs while generating substantial tax revenue.
 
-### Citywide Scenarios
-
-```{r citywide_scenarios}
-# Define citywide scenarios
-citywide_scenarios <- tribble(
-  ~scenario_name, ~property_type, ~bedroom_type, ~units, ~value_per_unit,
-  # Mixed Housing Focus
-  "Mixed Housing Focus", "Condo", "beds_2", 500, 575000,
-  "Mixed Housing Focus", "Small Multi-Family (2-6 units)", "mixed_1_to_3", 2000, 312500,
-  "Mixed Housing Focus", "Large Multi-Family (7+ units)", "mixed_studio_to_3", 1000, 400000,
-  
-  # High-Density Mixed
-  "High-Density Mixed", "Condo", "beds_2", 1000, 575000,
-  "High-Density Mixed", "Large Multi-Family (7+ units)", "mixed_studio_to_3", 2000, 400000,
-  "High-Density Mixed", "Large Multi-Family (7+ units)", "mixed_studio_to_3", 1000, 312500,
-  
-  # Luxury-Focused
-  "Luxury-Focused", "Condo", "beds_2", 1500, 575000,
-  "Luxury-Focused", "Large Multi-Family (7+ units)", "mixed_studio_to_3", 2500, 400000,
-  
-  # Balanced Development
-  "Balanced Development", "Condo", "beds_2", 800, 575000,
-  "Balanced Development", "Large Multi-Family (7+ units)", "mixed_studio_to_3", 1500, 400000,
-  "Balanced Development", "Large Multi-Family (7+ units)", "mixed_studio_to_3", 1500, 312500,
-  "Balanced Development", "Small Multi-Family (2-6 units)", "mixed_1_to_3", 500, 312500
+```{r lakeview_mixed_housing}
+# Define Lake View mixed housing scenario
+lakeview_mixed <- tribble(
+  ~property_type, ~bedroom_type, ~units, ~value_per_unit,
+  "Condo", "beds_2", 500, 575000,
+  "Small Multi-Family (2-6 units)", "mixed_1_to_3", 2000, 312500,
+  "Large Multi-Family (7+ units)", "mixed_studio_to_3", 1000, 400000
 )
 
 # Calculate effective tax rate (using 2% as example)
 effective_tax_rate <- 0.02
 
 # Calculate revenue
-citywide_results <- citywide_scenarios %>%
+lakeview_results <- lakeview_mixed %>%
   mutate(
     total_value = units * value_per_unit,
     tax_revenue = total_value * effective_tax_rate,
+    revenue_per_unit = tax_revenue / units,
     property_type = simplify_property_type(property_type)
   )
+
+# Create detailed table
+kable(lakeview_results %>%
+  select(property_type, units, value_per_unit, total_value, tax_revenue, revenue_per_unit) %>%
+  mutate(across(where(is.numeric), ~ format_currency(.))) %>%
+  arrange(desc(tax_revenue)),
+  col.names = c("Property Type", "Units", "Value per Unit", "Total Value", 
+                "Annual Tax Revenue", "Revenue per Unit"),
+  caption = "Lake View Township Mixed Housing Development - 3,500 Total Units"
+) %>% style_table()
 
 # Create visualization
-citywide_plot <- citywide_results %>%
-  group_by(scenario_name, property_type) %>%
-  summarize(tax_revenue = sum(tax_revenue), .groups = 'drop') %>%
-  ggplot(aes(x = scenario_name, 
-             y = tax_revenue/1e6, 
-             fill = property_type)) +
-  geom_bar(stat = "identity", position = "stack") +
+ggplot(lakeview_results, 
+       aes(x = property_type, 
+           y = tax_revenue/1e6, 
+           fill = property_type)) +
+  geom_bar(stat = "identity") +
   geom_text(aes(label = scales::dollar(tax_revenue/1e6, accuracy = 0.1, suffix = "M")),
             position = position_stack(vjust = 0.5),
             color = "white",
-            size = 3) +
+            size = 4) +
   scale_y_continuous(labels = scales::dollar_format(suffix = "M"),
                     expand = expansion(mult = c(0, 0.1))) +
   scale_fill_manual(values = modern_palette) +
   labs(
-    title = "Projected Annual Tax Revenue by Development Scenario - Citywide",
-    subtitle = "Broken down by property type, with revenue amounts shown in millions",
-    x = "Development Scenario",
+    title = "Projected Annual Tax Revenue by Property Type - Lake View Township",
+    subtitle = "Mixed Housing Development Scenario",
+    x = "Property Type",
     y = "Tax Revenue (Millions)",
     fill = "Property Type"
   ) +
@@ -210,206 +208,23 @@ citywide_plot <- citywide_results %>%
     plot.subtitle = element_text(size = 10, color = "gray50"),
     axis.title = element_text(face = "bold"),
     axis.text.x = element_text(angle = 45, hjust = 1),
-    legend.position = "bottom",
-    legend.box = "horizontal",
+    legend.position = "none",
     panel.grid.major.x = element_blank()
   )
-
-citywide_plot
-```
-
-#### Mixed Housing Focus Scenario
-```{r mixed_housing_focus}
-citywide_results %>%
-  filter(scenario_name == "Mixed Housing Focus") %>%
-  mutate(
-    total_value = units * value_per_unit,
-    tax_revenue = total_value * effective_tax_rate,
-    revenue_per_unit = tax_revenue / units
-  ) %>%
-  select(property_type, units, value_per_unit, total_value, tax_revenue, revenue_per_unit) %>%
-  mutate(across(where(is.numeric), ~ format_currency(.))) %>%
-  kable(col.names = c("Property Type", "Units", "Value per Unit", "Total Value", "Annual Tax Revenue", "Revenue per Unit"),
-        caption = "Mixed Housing Focus - 3,500 Total Units") %>%
-  style_table()
-```
-
-#### High-Density Mixed Scenario
-```{r high_density_mixed}
-citywide_results %>%
-  filter(scenario_name == "High-Density Mixed") %>%
-  mutate(
-    total_value = units * value_per_unit,
-    tax_revenue = total_value * effective_tax_rate,
-    revenue_per_unit = tax_revenue / units
-  ) %>%
-  select(property_type, units, value_per_unit, total_value, tax_revenue, revenue_per_unit) %>%
-  mutate(across(where(is.numeric), ~ format_currency(.))) %>%
-  kable(col.names = c("Property Type", "Units", "Value per Unit", "Total Value", "Annual Tax Revenue", "Revenue per Unit"),
-        caption = "High-Density Mixed - 4,000 Total Units") %>%
-  style_table()
-```
-
-#### Luxury-Focused Scenario
-```{r luxury_focused}
-citywide_results %>%
-  filter(scenario_name == "Luxury-Focused") %>%
-  mutate(
-    total_value = units * value_per_unit,
-    tax_revenue = total_value * effective_tax_rate,
-    revenue_per_unit = tax_revenue / units
-  ) %>%
-  select(property_type, units, value_per_unit, total_value, tax_revenue, revenue_per_unit) %>%
-  mutate(across(where(is.numeric), ~ format_currency(.))) %>%
-  kable(col.names = c("Property Type", "Units", "Value per Unit", "Total Value", "Annual Tax Revenue", "Revenue per Unit"),
-        caption = "Luxury-Focused - 4,000 Total Units") %>%
-  style_table()
-```
-
-#### Balanced Development Scenario
-```{r balanced_development}
-citywide_results %>%
-  filter(scenario_name == "Balanced Development") %>%
-  mutate(
-    total_value = units * value_per_unit,
-    tax_revenue = total_value * effective_tax_rate,
-    revenue_per_unit = tax_revenue / units
-  ) %>%
-  select(property_type, units, value_per_unit, total_value, tax_revenue, revenue_per_unit) %>%
-  mutate(across(where(is.numeric), ~ format_currency(.))) %>%
-  kable(col.names = c("Property Type", "Units", "Value per Unit", "Total Value", "Annual Tax Revenue", "Revenue per Unit"),
-        caption = "Balanced Development - 4,300 Total Units") %>%
-  style_table()
-```
-
-### Lake View Township Scenarios
-
-```{r lakeview_scenarios}
-# Define Lake View specific scenarios
-lakeview_scenarios <- tribble(
-  ~scenario_name, ~property_type, ~bedroom_type, ~units, ~value_per_unit,
-  # Transit-Oriented
-  "Transit-Oriented", "Condo", "beds_2", 500, 575000,
-  "Transit-Oriented", "Large Multi-Family (7+ units)", "mixed_studio_to_3", 1000, 400000,
-  
-  # Mixed-Density
-  "Mixed-Density", "Condo", "beds_2", 400, 575000,
-  "Mixed-Density", "Large Multi-Family (7+ units)", "mixed_studio_to_3", 600, 400000,
-  "Mixed-Density", "Small Multi-Family (2-6 units)", "mixed_1_to_3", 200, 400000,
-  
-  # Neighborhood-Scale
-  "Neighborhood-Scale", "Condo", "beds_2", 300, 575000,
-  "Neighborhood-Scale", "Large Multi-Family (7+ units)", "mixed_studio_to_3", 400, 400000,
-  "Neighborhood-Scale", "Small Multi-Family (2-6 units)", "mixed_1_to_3", 300, 400000
-)
-
-# Calculate revenue for Lake View
-lakeview_results <- lakeview_scenarios %>%
-  mutate(
-    total_value = units * value_per_unit,
-    tax_revenue = total_value * effective_tax_rate,
-    property_type = simplify_property_type(property_type)
-  )
-
-# Create Lake View visualization
-lakeview_plot <- lakeview_results %>%
-  group_by(scenario_name, property_type) %>%
-  summarize(tax_revenue = sum(tax_revenue), .groups = 'drop') %>%
-  ggplot(aes(x = scenario_name, 
-             y = tax_revenue/1e6, 
-             fill = property_type)) +
-  geom_bar(stat = "identity", position = "stack") +
-  geom_text(aes(label = scales::dollar(tax_revenue/1e6, accuracy = 0.1, suffix = "M")),
-            position = position_stack(vjust = 0.5),
-            color = "white",
-            size = 3) +
-  scale_y_continuous(labels = scales::dollar_format(suffix = "M"),
-                    expand = expansion(mult = c(0, 0.1))) +
-  scale_fill_manual(values = modern_palette) +
-  labs(
-    title = "Projected Annual Tax Revenue by Development Scenario - Lake View Township",
-    subtitle = "Broken down by property type, with revenue amounts shown in millions",
-    x = "Development Scenario",
-    y = "Tax Revenue (Millions)",
-    fill = "Property Type"
-  ) +
-  theme_minimal() +
-  theme(
-    plot.title = element_text(face = "bold", size = 14),
-    plot.subtitle = element_text(size = 10, color = "gray50"),
-    axis.title = element_text(face = "bold"),
-    axis.text.x = element_text(angle = 45, hjust = 1),
-    legend.position = "bottom",
-    legend.box = "horizontal",
-    panel.grid.major.x = element_blank()
-  )
-
-lakeview_plot
-```
-
-#### Transit-Oriented Development Scenario
-```{r transit_oriented}
-lakeview_results %>%
-  filter(scenario_name == "Transit-Oriented") %>%
-  mutate(
-    total_value = units * value_per_unit,
-    tax_revenue = total_value * effective_tax_rate,
-    revenue_per_unit = tax_revenue / units
-  ) %>%
-  select(property_type, units, value_per_unit, total_value, tax_revenue, revenue_per_unit) %>%
-  mutate(across(where(is.numeric), ~ format_currency(.))) %>%
-  kable(col.names = c("Property Type", "Units", "Value per Unit", "Total Value", "Annual Tax Revenue", "Revenue per Unit"),
-        caption = "Transit-Oriented Development - 1,500 Total Units") %>%
-  style_table()
-```
-
-#### Mixed-Density Development Scenario
-```{r mixed_density}
-lakeview_results %>%
-  filter(scenario_name == "Mixed-Density") %>%
-  mutate(
-    total_value = units * value_per_unit,
-    tax_revenue = total_value * effective_tax_rate,
-    revenue_per_unit = tax_revenue / units
-  ) %>%
-  select(property_type, units, value_per_unit, total_value, tax_revenue, revenue_per_unit) %>%
-  mutate(across(where(is.numeric), ~ format_currency(.))) %>%
-  kable(col.names = c("Property Type", "Units", "Value per Unit", "Total Value", "Annual Tax Revenue", "Revenue per Unit"),
-        caption = "Mixed-Density Development - 1,200 Total Units") %>%
-  style_table()
-```
-
-#### Neighborhood-Scale Development Scenario
-```{r neighborhood_scale}
-lakeview_results %>%
-  filter(scenario_name == "Neighborhood-Scale") %>%
-  mutate(
-    total_value = units * value_per_unit,
-    tax_revenue = total_value * effective_tax_rate,
-    revenue_per_unit = tax_revenue / units
-  ) %>%
-  select(property_type, units, value_per_unit, total_value, tax_revenue, revenue_per_unit) %>%
-  mutate(across(where(is.numeric), ~ format_currency(.))) %>%
-  kable(col.names = c("Property Type", "Units", "Value per Unit", "Total Value", "Annual Tax Revenue", "Revenue per Unit"),
-        caption = "Neighborhood-Scale Development - 1,000 Total Units") %>%
-  style_table()
 ```
 
 ## Key Findings
 
-### Citywide Development Impact
-- The Luxury-Focused scenario generates the highest total revenue at $37.25M annually
-- Mixed Housing Focus provides the most diverse unit mix while maintaining strong revenue
-- High-Density Mixed development offers varied price points and housing types
-- Balanced Development achieves both revenue and housing diversity goals
+### Current Housing Stock Insights
+- Condos show the highest median property values but varied tax bills
+- Large multi-family buildings demonstrate efficient tax revenue generation per unit
+- Small multi-family properties provide a balanced mix of affordability and revenue
 
-### Lake View Township Impact
-- Transit-Oriented Development generates the highest revenue at $13.75M annually
-- Mixed-Density approach balances revenue with neighborhood context
-- Neighborhood-Scale development maintains character while generating significant revenue
-
-### Revenue Generation Insights
-- Luxury multi-family developments consistently drive strong revenue
-- Standard condos at $575,000 provide stable revenue per unit
-- Smaller multi-family buildings effectively complement larger developments
-- Mixed-use scenarios generally outperform single-type development
+### Lake View Township Development Impact
+- Mixed housing development could generate significant annual tax revenue:
+  - Small multi-family units: $12.5M
+  - Large multi-family units: $8.0M
+  - Condos: $5.75M
+  - Total projected annual revenue: $26.25M
+- The scenario provides diverse housing options while maintaining strong revenue generation
+- Development mix aligns with neighborhood character and market demands
